[package]
name = "ch17-02-trait-objects"
version = "0.1.0"
authors = ["colder <colder@vitarn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 设置 name 同时必须设置 path
[lib]
name = "gui"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
